# libc-checks

./: Cargo.toml  README.md  diagram.json  wokwi.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: main.rs
