[package]
name         = "libc-checks"
version      = "0.1.0"
authors      = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition      = "2021"
resolver     = "2"
rust-version = "1.77"

[[bin]]
name    = "libc-checks"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true
opt-level = "z"

[dependencies]
esp-idf-svc = { version = "0.50.1", default-features = false, features = [
    "alloc",
    "binstart",
    "std",
] }
libc = "0.2.162"
log = { version = "0.4", default-features = false }


[build-dependencies]
embuild = "0.33.0"
